--- a/lab2.html
+++ b/lab2.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	
-	<title>Тюльпаны</title>
+	<meta charset="UTF-8">
+	<title>Г’ГѕГ«ГјГЇГ Г­Г»</title>
     </head>
 
 <body>
-<h1 align="center">Тюльпаны в Бресте оптом</h1>
-<img src="тюльпаны.jpg" alt="тюльпаны">
+<h1 align="center">Г’ГѕГ«ГјГЇГ Г­Г» Гў ГЃГ°ГҐГ±ГІГҐ Г®ГЇГІГ®Г¬</h1>
+<img src="ГІГѕГ«ГјГЇГ Г­Г».jpg" alt="ГІГѕГ«ГјГЇГ Г­Г»">
 
-<h3>Большой ассортимент тюльпанов по доступным ценам</br></br>
-Оформить заявку можно ниже, удобным для вас способом</br></h3>
+<h3>ГЃГ®Г«ГјГёГ®Г© Г Г±Г±Г®Г°ГІГЁГ¬ГҐГ­ГІ ГІГѕГ«ГјГЇГ Г­Г®Гў ГЇГ® Г¤Г®Г±ГІГіГЇГ­Г»Г¬ Г¶ГҐГ­Г Г¬</br></br>
+ГЋГґГ®Г°Г¬ГЁГІГј Г§Г ГїГўГЄГі Г¬Г®Г¦Г­Г® Г­ГЁГ¦ГҐ, ГіГ¤Г®ГЎГ­Г»Г¬ Г¤Г«Гї ГўГ Г± Г±ГЇГ®Г±Г®ГЎГ®Г¬</br></h3>
 
 <form action="script.php" enctype="multipart/form-data">
-   <h3>1</h3>Введите количество штук для предварительного заказа  <input type="text" name="textField" required="required">  выбрав в поле нужный цвет цветов:
+   <h3>1</h3>Г‚ГўГҐГ¤ГЁГІГҐ ГЄГ®Г«ГЁГ·ГҐГ±ГІГўГ® ГёГІГіГЄ Г¤Г«Гї ГЇГ°ГҐГ¤ГўГ Г°ГЁГІГҐГ«ГјГ­Г®ГЈГ® Г§Г ГЄГ Г§Г   <input type="text" name="textField" required="required">  ГўГ»ГЎГ°Г Гў Гў ГЇГ®Г«ГҐ Г­ГіГ¦Г­Г»Г© Г¶ГўГҐГІ Г¶ГўГҐГІГ®Гў:
   
     <select name="list">
         <option value=""></option>
-        <option value="element1">белые</option>
-        <option value="element2">жёлтые</option>
-        <option value="element3">фиолетовые</option>
-	<option value="element4">розовые</option>
-	<option value="element5">красные</option>
-	<option value="element6">бело-розовые</option>
+        <option value="element1">ГЎГҐГ«Г»ГҐ</option>
+        <option value="element2">Г¦ВёГ«ГІГ»ГҐ</option>
+        <option value="element3">ГґГЁГ®Г«ГҐГІГ®ГўГ»ГҐ</option>
+	<option value="element4">Г°Г®Г§Г®ГўГ»ГҐ</option>
+	<option value="element5">ГЄГ°Г Г±Г­Г»ГҐ</option>
+	<option value="element6">ГЎГҐГ«Г®-Г°Г®Г§Г®ГўГ»ГҐ</option>
     </select>
     <br>
- <button type="submit" formmethod="GET">Оформить заказ</button>
+ <button type="submit" formmethod="GET">ГЋГґГ®Г°Г¬ГЁГІГј Г§Г ГЄГ Г§</button>
  <br><br>
-   <h3>2</h3> При отправке формы заказа, Вы можете прикрепить файл необходимого для вас сорта и цвета (если не задано выше в поле со списком)</br>
+   <h3>2</h3> ГЏГ°ГЁ Г®ГІГЇГ°Г ГўГЄГҐ ГґГ®Г°Г¬Г» Г§Г ГЄГ Г§Г , Г‚Г» Г¬Г®Г¦ГҐГІГҐ ГЇГ°ГЁГЄГ°ГҐГЇГЁГІГј ГґГ Г©Г« Г­ГҐГ®ГЎГµГ®Г¤ГЁГ¬Г®ГЈГ® Г¤Г«Гї ГўГ Г± Г±Г®Г°ГІГ  ГЁ Г¶ГўГҐГІГ  (ГҐГ±Г«ГЁ Г­ГҐ Г§Г Г¤Г Г­Г® ГўГ»ГёГҐ Гў ГЇГ®Г«ГҐ Г±Г® Г±ГЇГЁГ±ГЄГ®Г¬)</br>
     <input type="file" name="userFile"></br></br>
-Введите кличество штук для заказа в первой форме и нажмите кнопку"оформить заказ" <br>
-        <button type="submit" formmethod="POST">Оформить заказ</button></br>
+Г‚ГўГҐГ¤ГЁГІГҐ ГЄГ«ГЁГ·ГҐГ±ГІГўГ® ГёГІГіГЄ Г¤Г«Гї Г§Г ГЄГ Г§Г  Гў ГЇГҐГ°ГўГ®Г© ГґГ®Г°Г¬ГҐ ГЁ Г­Г Г¦Г¬ГЁГІГҐ ГЄГ­Г®ГЇГЄГі"Г®ГґГ®Г°Г¬ГЁГІГј Г§Г ГЄГ Г§" <br>
+        <button type="submit" formmethod="POST">ГЋГґГ®Г°Г¬ГЁГІГј Г§Г ГЄГ Г§</button></br>
        </form>
 
-<h1 align="center">Справки по телефонам: +375292000913, 80(1643)98-7-58</h1>
+<h1 align="center">Г‘ГЇГ°Г ГўГЄГЁ ГЇГ® ГІГҐГ«ГҐГґГ®Г­Г Г¬: +375292000913, 80(1643)98-7-58</h1>
 
 </body>
 </html>
